<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.svobodapeter.musicalstructureapp.SongAlbum">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/main_activity"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_for_list_of_songs"
            android:paddingBottom="@dimen/menu_icon_bottom"
            android:paddingTop="@dimen/menu_icon_top"
            android:src="@drawable/song_album" />


        <ImageButton
            android:id="@+id/play_activity"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_control_playing_of_song"
            android:paddingBottom="@dimen/menu_icon_bottom"
            android:paddingTop="@dimen/menu_icon_top"
            android:src="@drawable/playing_activity" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_padding_top_bottom"
        android:layout_marginStart="30dp"
        android:text="@string/albums"
        android:textSize="16sp"
        android:textStyle="bold" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_top_bottom"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_music" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingBottom="@dimen/margin_padding_top_bottom"
                android:text="@string/trendingMusic"
                android:textSize="@dimen/cathegory"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="32dp"
                android:divider="@color/grey">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingBottom="@dimen/margin_padding_top_bottom"
                android:text="@string/popMusic"
                android:textSize="@dimen/cathegory"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/pop"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="32dp"
                android:divider="@color/grey">

            </android.support.v7.widget.RecyclerView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingBottom="@dimen/margin_padding_top_bottom"
                android:text="@string/electronicalMusic"
                android:textSize="@dimen/cathegory"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/electronical"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="32dp"
                android:divider="@color/grey">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingBottom="@dimen/margin_padding_top_bottom"
                android:text="@string/rockMusic"
                android:textSize="@dimen/cathegory"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rock"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="32dp"
                android:divider="@color/grey">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
