<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svobodapeter.musicalstructureapp.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/main_activity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:layout_margin="0dp"
            style="@style/CustomButton"
            android:src="@mipmap/main"/>


        <ImageButton
            android:id="@+id/play_activity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            style="@style/CustomButton"
            android:src="@mipmap/play"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/albums"
        android:layout_margin="8dp"
        android:layout_gravity="center"/>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_music"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/trendingMusic"
        android:paddingBottom="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trending"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:divider="@color/grey"
        android:layout_marginBottom="32dp">

    </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/popMusic"
                android:paddingBottom="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/pop"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:divider="@color/grey"
                android:layout_marginBottom="32dp">

            </android.support.v7.widget.RecyclerView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/electronicalMusic"
                android:paddingBottom="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/electronical"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:divider="@color/grey"
                android:layout_marginBottom="32dp">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/rockMusic"
                android:paddingBottom="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rock"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:divider="@color/grey"
                android:layout_marginBottom="32dp">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
